tests/Types/type_aliases_rf.php.expectf

Fatal error: Unknown type or class HH\void in %s/tests/Types/type_aliases_rf.php on line 115